removed the card section and updated the color of the surrounding sections

--- a/index.html
+++ b/index.html
@@ -42,51 +42,53 @@
 	</div>
 
 	<!-- Skills and intrest section -->
-	<div class="container container-skills">
-		<div class="sections">
-			<h2 class="section-title">Skills</h2>
-			<div class="list-card">
-				<span class="exp">10+ years</span>
-				<div>
-					<h3>Software development</h3>
-					<span>Javascript, C#, .NET, PHP, …</span>
+	<div class="section">
+		<div class="container container-skills">
+			<div class="sections">
+				<h2 class="section-title">Skills</h2>
+				<div class="list-card">
+					<div class="exp">10+ years</div>
+					<div>
+						<h3>Software development</h3>
+						<div>Javascript, C#, .NET, PHP, …</div>
+					</div>
+				</div>
+				<div class="list-card">
+					<div class="exp">7+ years</div>
+					<div>
+						<h3>Architecture & Devops</h3>
+						<div>APIs, AWS, Azure, ...</div>
+					</div>
+				</div>
+				<div class="list-card">
+					<div class="exp">7+ years</div>
+					<div>
+						<h3>Web Applications</h3>
+						<div>Vue, Angular, Laravel, ...</div>
+					</div>
 				</div>
 			</div>
-			<div class="list-card">
-				<span class="exp">7+ years</span>
-				<div>
-					<h3>Architecture & Devops</h3>
-					<span>APIs, AWS, Azure, ...</span>
-				</div>
-			</div>
-			<div class="list-card">
-				<span class="exp">7+ years</span>
-				<div>
-					<h3>Web Applications</h3>
-					<span>Vue, Angular, Laravel, ...</span>
-				</div>
-			</div>
-		</div>
-		<div class="sections">
-			<h2 class="section-title">Interests</h2>
+			<div class="sections">
+				<h2 class="section-title">Interests</h2>
 
-			<div class="list-card">
-				<div>
-					<h3>Backend development</h3>
-					<span>.NET Core, Node, Go, Python</span>
+				<div class="list-card">
+					<div>
+						<h3>Backend development</h3>
+						<div>.NET Core, Node, Go, Python</div>
+					</div>
 				</div>
-			</div>
-			<div class="list-card">
-				<div>
-					<h3>Blockchain and Crypto Currency</h3>
-					<span>Bitcoin</span>
+				<div class="list-card">
+					<div>
+						<h3>Blockchain and Crypto Currency</h3>
+						<div>Bitcoin</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<!-- Achievements -->
-	<div class="container cards">
+	<!-- <div class="container cards">
 		<div class="card">
 			<div class="skill-level">
 				<span>+</span>
@@ -131,86 +133,89 @@
 				<span>Web projects and ensure the quality of delivery</span>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- Timeeline -->
-	<div class="container">
-		<h2 class="section-title">Experience</h2>
-		<div class="timeline">
-			<div class="timeline-element">
-				<hr class="point-line">
-				<span class="point"></span>
-				<p class="description">
-					Lead Engineer at XpenseOne
-				</p>
-				<span class="date">Feb, 2018 - Now</span>
-			</div class="timeline-element">
-			<div class="timeline-element">
-				<hr class="point-line">
-				<span class="point"></span>
-				<p class="description">
-					Lead Developer at Profits4Purpose
-				</p>
-				<span class="date">Jan 2016 – Feb 2018</span>
-			</div class="timeline-element">
-			<div class="timeline-element">
-				<hr class="point-line">
-				<span class="point"></span>
-				<p class="description">
-					Systems Architect / Senior Software Engineer at Gravity Jack
-				</p>
-				<span class="date">Sep 2011 - Dec 2015</span>
-			</div class="timeline-element">
-			<div class="timeline-element">
-				<hr class="point-line">
-				<span class="point"></span>
-				<p class="description">
-					Service Information Developer II at Hewlett-Packard Enterprise Services
-				</p>
-				<span class="date">Aug 2010 - Sep 2011</span>
-			</div class="timeline-element">
+	<div class="section section-shaded">
+		<div class="container container-experience">
+			<h2 class="section-title">Experience</h2>
+			<div class="timeline">
+				<div class="timeline-element">
+					<hr class="point-line">
+					<span class="point"></span>
+					<p class="description">
+						Lead Engineer at XpenseOne
+					</p>
+					<span class="date">Feb, 2018 - Now</span>
+				</div class="timeline-element">
+				<div class="timeline-element">
+					<hr class="point-line">
+					<span class="point"></span>
+					<p class="description">
+						Lead Developer at Profits4Purpose
+					</p>
+					<span class="date">Jan 2016 – Feb 2018</span>
+				</div class="timeline-element">
+				<div class="timeline-element">
+					<hr class="point-line">
+					<span class="point"></span>
+					<p class="description">
+						Systems Architect / Senior Software Engineer at Gravity Jack
+					</p>
+					<span class="date">Sep 2011 - Dec 2015</span>
+				</div class="timeline-element">
+				<div class="timeline-element">
+					<hr class="point-line">
+					<span class="point"></span>
+					<p class="description">
+						Service Information Developer II at Hewlett-Packard Enterprise Services
+					</p>
+					<span class="date">Aug 2010 - Sep 2011</span>
+				</div class="timeline-element">
+			</div>
 		</div>
-	</div>
-	<div class="container">
-		<h2 class="section-title">Education</h2>
-		<div class="timeline">
-			<div class="timeline-element">
-				<hr class="point-line">
-				<span class="point"></span>
-				<p class="description">
-					BS in Computer Science
-					Washington State University
-				</p>
-				<span class="date">2007 - 2009</span>
-			</div class="timeline-element">
-			<div class="timeline-element">
-				<hr class="point-line">
-				<span class="point"></span>
-				<p class="description">
-					Startup Engineering and Gamification
-					Coursera
-				</p>
-				<span class="date">2013</span>
-			</div class="timeline-element">
+	
+		<div class="container">
+			<h2 class="section-title">Education</h2>
+			<div class="timeline">
+				<div class="timeline-element">
+					<hr class="point-line">
+					<span class="point"></span>
+					<p class="description">
+						BS in Computer Science
+						Washington State University
+					</p>
+					<span class="date">2007 - 2009</span>
+				</div class="timeline-element">
+				<div class="timeline-element">
+					<hr class="point-line">
+					<span class="point"></span>
+					<p class="description">
+						Startup Engineering and Gamification
+						Coursera
+					</p>
+					<span class="date">2013</span>
+				</div class="timeline-element">
+			</div>
 		</div>
 	</div>
 	<div class="section">
-			<div class="container">
-				<h2 class="section-title">Posts</h2>
-				<h3><a href="posts/authentication-meetup-notes.html">Authentication Meetup Notes</a></h3>
-				<br>
-				A brief overview of some the types of authentication and authorization when creating web and mobile apps.</a>
-				<br>
-				<br>
-				<h3><a href="posts/azure-ssl-certfificate.html">Creating a StartSSL SSL Certificate for Azure</a></h3>
-				<br>
-				Here are the steps to create a StartSSL ssl certificate for use on an Azure website.
-				<br>
-				<br>
-				<h3><a href="posts/publishing-reusable-code-nuget.html">Publishing Reusable Code on Nuget</a></h3>
-				<br>
-				Straight forward instructions for publishing packages on Nuget.
-			</div>
+		<div class="container">
+			<h2 class="section-title">Posts</h2>
+			<h3><a href="posts/authentication-meetup-notes.html">Authentication Meetup Notes</a></h3>
+			<br>
+			A brief overview of some the types of authentication and authorization when creating web and mobile apps.</a>
+			<br>
+			<br>
+			<h3><a href="posts/azure-ssl-certfificate.html">Creating a StartSSL SSL Certificate for Azure</a></h3>
+			<br>
+			Here are the steps to create a StartSSL ssl certificate for use on an Azure website.
+			<br>
+			<br>
+			<h3><a href="posts/publishing-reusable-code-nuget.html">Publishing Reusable Code on Nuget</a></h3>
+			<br>
+			Straight forward instructions for publishing packages on Nuget.
+		</div>
 	</div>
 	<br><br>
 	<footer class="container">
