Added more skills and interests

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 				<div class="list-card">
 					<div class="exp">10+ years</div>
 					<div>
-						<h3>Software development</h3>
-						<div>Javascript, C#, .NET, PHP, …</div>
+						<h3>Software Development</h3>
+						<div>Javascript, C#, .NET, PHP, HTML, CSS, …</div>
 					</div>
 				</div>
 				<div class="list-card">
@@ -63,7 +63,7 @@
 				<div class="list-card">
 					<div class="exp">7+ years</div>
 					<div>
-						<h3>Web Applications</h3>
+						<h3>Frameworks</h3>
 						<div>Vue, Angular, Laravel, ...</div>
 					</div>
 				</div>
@@ -73,14 +73,24 @@
 
 				<div class="list-card">
 					<div>
-						<h3>Backend development</h3>
+						<h3>Backend Development</h3>
 						<div>.NET Core, Node, Go, Python</div>
 					</div>
 				</div>
 				<div class="list-card">
 					<div>
 						<h3>Blockchain and Crypto Currency</h3>
-						<div>Bitcoin</div>
+						<div>Bitcoin, Mining, Pools, Algorithmic Trading</div>
+					</div>
+				</div>
+				<div class="list-card">
+					<div>
+						<h3>Machine Learning</h3>
+					</div>
+				</div>
+				<div class="list-card">
+					<div>
+						<h3>Security and Hacking</h3>
 					</div>
 				</div>
 			</div>
@@ -182,7 +192,7 @@
 					<hr class="point-line">
 					<span class="point"></span>
 					<p class="description">
-						BS in Computer Science
+						BS in Computer Science<br>
 						Washington State University
 					</p>
 					<span class="date">2007 - 2009</span>
@@ -191,7 +201,7 @@
 					<hr class="point-line">
 					<span class="point"></span>
 					<p class="description">
-						Startup Engineering and Gamification
+						Startup Engineering and Gamification<br>
 						Coursera
 					</p>
 					<span class="date">2013</span>
