--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="hero-main">
 					<h1 class="name"><strong>Josh</strong> Crawford</h1>
 					<span class="job-title">Software Engineer</span>
-					<img class="bio-photo" src="https://s.gravatar.com/avatar/76708b9af92b41d3861956800fc75a54?s=100" 
+					<img class="bio-photo" src="https://s.gravatar.com/avatar/76708b9af92b41d3861956800fc75a54?s=100"
 						alt="Josh Crawford bio photo">
 				</div>
 				<div class="hero-links">
@@ -79,7 +79,7 @@
 				</div>
 				<div class="list-card">
 					<div>
-						<h3>Blockchain and Crypto Currency</h3>
+						<h3>Blockchain and Cryptocurrency</h3>
 						<div>Bitcoin, Mining, Pools, Algorithmic Trading</div>
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 				</div class="timeline-element">
 			</div>
 		</div>
-	
+
 		<div class="container">
 			<h2 class="section-title">Education</h2>
 			<div class="timeline">
@@ -213,18 +213,26 @@
 		<div class="container">
 			<h2 class="section-title">Posts</h2>
 			<h3><a href="posts/authentication-meetup-notes.html">Authentication Meetup Notes</a></h3>
-			<br>
-			A brief overview of some the types of authentication and authorization when creating web and mobile apps.</a>
-			<br>
+			<ul>
+				<li>
+					A brief overview of some the types of authentication and authorization when creating web and mobile
+					apps.</a>
+				</li>
+			</ul>
 			<br>
 			<h3><a href="posts/azure-ssl-certfificate.html">Creating a StartSSL SSL Certificate for Azure</a></h3>
-			<br>
-			Here are the steps to create a StartSSL ssl certificate for use on an Azure website.
-			<br>
+			<ul>
+				<li>
+					Here are the steps to create a StartSSL ssl certificate for use on an Azure website.
+				</li>
+			</ul>
 			<br>
 			<h3><a href="posts/publishing-reusable-code-nuget.html">Publishing Reusable Code on Nuget</a></h3>
-			<br>
-			Straight forward instructions for publishing packages on Nuget.
+			<ul>
+				<li>
+					Straight forward instructions for publishing packages on Nuget.
+				</li>
+			</ul>
 		</div>
 	</div>
 	<br><br>
