Re-added favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Josh Crawford Resume</title>
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel='shortcut icon' type='image/x-icon' href='./images/favicon.ico' />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"
 		integrity="sha384-QokYePQSOwpBDuhlHOsX0ymF6R/vLk/UQVz3WHa6wygxI5oGTmDTv8wahFOSspdm" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css"
