--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 							class="fab fa-stack-overflow"></i></a>
 				</div>
 
-				<h2 class="lead">Development and architecture of web applications and APIs for companies that make a
-					difference</h2>
+				<h2 class="lead">I'm a solidity engineer helping teams build amazing web3 solutions on the blockchain!</h2>
 			</div>
 		</div>
 	</div>
