Updated skills and interests

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<div class="exp">10+ years</div>
 					<div>
 						<h3>Software Development</h3>
-						<div>Javascript, C#, .NET, PHP, HTML, CSS, …</div>
+						<div>Solidity, Javascript, C#, .NET, PHP, HTML, CSS, ...</div>
 					</div>
 				</div>
 				<div class="list-card">
@@ -64,7 +64,7 @@
 					<div class="exp">7+ years</div>
 					<div>
 						<h3>Frameworks</h3>
-						<div>Vue, Angular, Laravel, ...</div>
+						<div>React, Vue, Ganache, Truffle, ...</div>
 					</div>
 				</div>
 			</div>
@@ -73,14 +73,14 @@
 
 				<div class="list-card">
 					<div>
-						<h3>Backend Development</h3>
-						<div>.NET Core, Node, Go, Python</div>
+						<h3>Blockchain / Crypto / Web3 / Nfts</h3>
+						<div>Bitcoin, Ethereum, Solana, Polygon, Defi, Dapps</div>
 					</div>
 				</div>
 				<div class="list-card">
 					<div>
-						<h3>Blockchain and Cryptocurrency</h3>
-						<div>Bitcoin, Mining, Pools, Algorithmic Trading</div>
+						<h3>Backend Development</h3>
+						<div>Solidity, Node, .NET Core, Go, Python</div>
 					</div>
 				</div>
 				<div class="list-card">
