--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
 					<div class="exp">10+ years</div>
 					<div>
 						<h3>Software Development</h3>
-						<div>Solidity, Javascript, C#, .NET, PHP, HTML, CSS, ...</div>
+						<div>Blockchain: Web3, Solidity, DEX, Defi, Yeild farming</div>
+						<div>Languages: Solidity, Javascript/Typescript, C#, Python, PHP, HTML, CSS</div>
+						<div>Testing: Mocha, Chai</div>
+					</div>
+				</div>
+				<div class="list-card">
+					<div class="exp">7+ years</div>
+					<div>
+						<h3>Frameworks</h3>
+						<div>Blockchain: Hardhat, Ganache, Truffle, Ethers.js, Web3.js</div>
+						<div>Server: Node.js, .Net Core</div>
+						<div>Frontend: Vue, React, Angular</div>
 					</div>
 				</div>
 				<div class="list-card">
@@ -60,21 +71,14 @@
 						<div>APIs, AWS, Azure, ...</div>
 					</div>
 				</div>
-				<div class="list-card">
-					<div class="exp">7+ years</div>
-					<div>
-						<h3>Frameworks</h3>
-						<div>React, Vue, Ganache, Truffle, ...</div>
-					</div>
-				</div>
 			</div>
 			<div class="sections">
 				<h2 class="section-title">Interests</h2>
 
 				<div class="list-card">
 					<div>
-						<h3>Blockchain / Crypto / Web3 / Nfts</h3>
-						<div>Bitcoin, Ethereum, Solana, Polygon, Defi, Dapps</div>
+						<h3>Blockchain / Crypto / Web3</h3>
+						<div>Ethereum, Bitcoin, smartBCH, Polygon, Defi, Dapps</div>
 					</div>
 				</div>
 				<div class="list-card">
@@ -154,7 +158,7 @@
 					<hr class="point-line">
 					<span class="point"></span>
 					<p class="description">
-						Lead Engineer at XpenseOne
+						CTO at XpenseOne
 					</p>
 					<span class="date">Feb, 2018 - Now</span>
 				</div class="timeline-element">
