--- a/index.html
+++ b/index.html
@@ -47,54 +47,43 @@
 			<div class="sections">
 				<h2 class="section-title">Skills</h2>
 				<div class="list-card">
-					<div class="exp">10+ years</div>
 					<div>
-						<h3>Software Development</h3>
-						<div>Blockchain: Web3, Solidity, DEX, Defi, Yeild farming</div>
+						<h3>Blockchain</h3>
+						<div>Web3, Solidity, DEX, Defi, Yeild farming</div>
+					</div>
+				</div>
+				<div class="list-card">
+					<div>
+						<h3>Languages</h3>
 						<div>Languages: Solidity, Javascript/Typescript, C#, Python, PHP, HTML, CSS</div>
-						<div>Testing: Mocha, Chai</div>
 					</div>
 				</div>
 				<div class="list-card">
-					<div class="exp">7+ years</div>
 					<div>
-						<h3>Frameworks</h3>
-						<div>Blockchain: Hardhat, Ganache, Truffle, Ethers.js, Web3.js</div>
-						<div>Server: Node.js, .Net Core</div>
-						<div>Frontend: Vue, React, Angular</div>
-					</div>
-				</div>
-				<div class="list-card">
-					<div class="exp">7+ years</div>
-					<div>
-						<h3>Architecture & Devops</h3>
-						<div>APIs, AWS, Azure, ...</div>
+						<h3>Devops & Cloud</h3>
+						<div>AWS, Azure, Appcenter, Vercel...</div>
 					</div>
 				</div>
 			</div>
 			<div class="sections">
-				<h2 class="section-title">Interests</h2>
+				<h2 class="section-title">Frameworks</h2>
 
 				<div class="list-card">
 					<div>
 						<h3>Blockchain / Crypto / Web3</h3>
-						<div>Ethereum, Bitcoin, smartBCH, Polygon, Defi, Dapps</div>
+						<div>Hardhat, Ethers.js, Web3.js, Ganache, Truffle</div>
 					</div>
 				</div>
 				<div class="list-card">
 					<div>
-						<h3>Backend Development</h3>
-						<div>Solidity, Node, .NET Core, Go, Python</div>
+						<h3>Backend</h3>
+						<div>Node.js, .Net Core, Laravel</div>
 					</div>
 				</div>
 				<div class="list-card">
 					<div>
-						<h3>Machine Learning</h3>
-					</div>
-				</div>
-				<div class="list-card">
-					<div>
-						<h3>Security and Hacking</h3>
+						<h3>Frontend</h3>
+						<div>Vue, React, Angular</div>
 					</div>
 				</div>
 			</div>
